--- a/.github/workflows/sync-upstream-workflow.yaml
+++ b/.github/workflows/sync-upstream-workflow.yaml
@@ -24,10 +24,10 @@ jobs:
           path: upstream_checkout_path
       - id: prepare-sync-pull-request 
         env:
-          ACTING_USER: {{ github.actor }}
-          UPSTREAM_REF: {{ input.upstream_ref }}
+          ACTING_USER: ${{ github.actor }}
+          UPSTREAM_REF: ${{ input.upstream_ref }}
         run: |
-          [ ${ACTING_USERR} != "maxshine" ] && exit 0
+          [ ${ACTING_USER} != "maxshine" ] && exit 0
           git config user.name "Ryan Gao"
           git config user.email "ryangao-au@outlook.com"
           work_branch="sync/upstream-${UPSTREAM_REF}-`date +%Y%m%d`"
