--- a/.github/workflows/sync-upstream-workflow.yaml
+++ b/.github/workflows/sync-upstream-workflow.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to synchronize released action from upstream
     permissions:
-      pull-request: write
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
         id: checkout-downstream
